terraform/5-route_tables.tf
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.django_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.django_igw.id
  }

  tags = {
    Name = "PublicRouteTable"
  }
}

resource "aws_route_table_association" "public_subnet_association" {
  subnet_id      = aws_subnet.django_public_subnet.id
  route_table_id = aws_route_table.public_route_table.id
}
