terraform/6-security_groups.tf
resource "aws_security_group" "django_sg" {
  name        = "django_sg"
  description = "Allow web traffic to Django app"
  vpc_id      = aws_vpc.django_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "DjangoSecurityGroup"
  }
}
